# raschel

./: .ruff.toml  README.md  pyproject.toml  pytest.ini
backup/: __init__.py  __main__.py  db.py  diff.py  file_util.py
backup/db/: db.py  up.py
db/: up.py
raschel/: __init__.py  __main__.py  backup.py  diff.py  file_util.py
raschel/ui/: ui.py  view.qml
src/: __main__.py  config.py
tests/: context.py  test_backup.py
