[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "tom-backup"
requires-python = ">= 3.10"
description = "Backup client"
authors = [{ name = "thoraxe" }]

dependencies = ["jsonpickle", "itertools", "sqlite3", "peewee"]

[project.optional-dependencies]
dev = ["build", "black", "ruff"]
